[package]
name = "kumo"
version = "0.1.0"
authors = ["RidiculousLoop <from.this.ridiculous.loop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "*"
yup-oauth2 = "*"
hyper = "*"
hyper-rustls = "*"
serde = "*"
serde_json = "*"
tokio = "*"
