[package]
name = "kumo"
version = "0.1.0"
authors = ["7cm-diameter <from.this.ridiculous.loop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = "*"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["macros", "tcp", "dns", "io-util"] }
reqwest = { version = "*", features = ["blocking", "json", "rustls-tls"] }
chrono = "*"
clap = "*"
async-trait = "*"
once_cell = "*"
